<resources>
    <string name="app_name">CMath</string>
    <string name="welHello">Hello!</string>
    <string name="welPrep">Preparing</string>
    <string name="welAskPermissions">For this tool, we had to ask some permissions form you,we hope you can agree with us.If you agree, click the button to start.If you don\'t agree, exit, please.We will not ask you again if you agree.</string>
    <string name="welStart">Start</string>
    <string name="welExit">Exit</string>
    <string name="welWait">Waiting for you</string>
    <string name="welLoadFiles">Load cards</string>
    <string name="welCheckUpdate">Checking updates of cards</string>
    <string name="welDone">Done</string>

    <string name="mainNoFile1">No cards,&#160;</string>
    <string name="mainNoFile2">Add</string>
    <string name="mainNoFile3">&#160;\?</string>

    <string name="test">Test</string>
    
    <string name="importantErr">"No this card, or there are some error here"</string>
    <string name="importantExit">Exit</string>
    <string name="importantCount">Count!</string>
    <string name="importantCounting">Counting…</string>

    <string name="menu_1">How to add a card?</string>

    <string name="list_local">Import from local file</string>
    <string name="list_store">Go to Card Store</string>
    <string name="list_check">Check update</string>
    <string name="list_delete">Delete!</string>

    <string name="bar_menu">Main menu</string>
    <string name="bar_check_all">Check updates of all cards</string>
    <string name="bar_add">Add card</string>
    <string name="bar_help">Help</string>
    <string name="bar_about">About</string>
    <string name="bar_settings">Settings</string>

    <string name="file_back">Back</string>
    <string name="file_empty">Empty</string>

    <string name="help_search">Search for help…</string>

    <string name="about_text1">Build Version 0.3\nCopyright © Chen.ZH 2020\nChen.ZH all right reserved\n\nTalk with me!\nQQ:1052470899\nWeChat:NAX-01\nCodemao:MainActivity</string>

    <string name="settings_title">Settings</string>
    <string name="settings_text_clearCache">Clear cache</string>
    <string name="settings_button_clearCache">Clear now</string>
    <string name="settings_text_update">Check update</string>
    <string name="settings_button_update">Check now</string>
    <string name="settings_switch_checkCardsOnStart">Check card updates on start up</string>
    <string name="settings_message_bottom">Yes, just this one, no more…(Surprised?)</string>

    <string name="acc_bar_pic">A background picture</string>
    <string name="about_acs_text">C Math logo</string>
    <string name="impo_acc_pic">The calculate picture</string>
    <string name="impo_detail">Detail</string>

    <string name="search_tv">Search for anywhere…</string>

</resources>
