<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCoo"
    android:layout_height="match_parent"
    android:layout_width="match_parent">




    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/mainDr"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/mainList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mainFloatingA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/bar_add"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="visible"
                app:backgroundTint="@color/c_text"
                app:borderWidth="0dp"
                app:srcCompat="@drawable/ic_action_add" />

            <LinearLayout
                android:id="@+id/mainNofileL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/mat1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainNoFile1" />

                <TextView
                    android:id="@+id/mat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="addButton_onclick"
                    android:text="@string/mainNoFile2"
                    android:textColor="@color/c_text" />

                <TextView
                    android:id="@+id/mat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainNoFile3" />

            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="end">
            <include
                layout="@layout/right_bar"/>
        </FrameLayout>

    </androidx.drawerlayout.widget.DrawerLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>